--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,17 +44,11 @@ jobs:
         with:
           version: v2.7.2
 
-      - name: Run linter
-        run: golangci-lint run ./...
-
-      - name: Run go vet
-        run: go vet ./...
-
-      - name: Run tests (coverage)
-        run: |
-          go test ./... -v -coverprofile=coverage.out
+      - name: Run CI (make ci)
+        run: make ci
 
       - name: Upload coverage artifact
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report
