--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,3 +65,37 @@ jobs:
           go-version: 1.24
       - name: Run race detector
         run: go test ./... -race -run Test -timeout 10m
+
+  ci-matrix:
+    name: Cross-platform Make CI
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        go-version: [1.24]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: ${{ matrix.go-version }}
+
+      - name: Download Go modules
+        run: go mod download
+
+      - name: Install golangci-lint (platform-specific)
+        uses: golangci/golangci-lint-action@v4
+        with:
+          version: v2.7.2
+
+      - name: Run CI (make ci)
+        run: make ci
+
+      - name: Upload coverage artifact
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-${{ matrix.os }}
+          path: coverage.out
